syntax = "proto3";

import "movie.proto";

message EmptyRequest {}

message MovieRequest {
    Movie movie = 1;
}

message SearchByCastRequest {
    string castName = 1;
}

/**
 * movie result message, contains list of movies
 */
message MoviesResult {
    /**
     * list of movies
     */
    repeated Movie result = 1;
}

service MovieSearchService {
  /**
  * search movies by the name of the cast
  */
  rpc SearchMoviesByCast (SearchByCastRequest) returns (stream Movie) {}
}

service MoviesService {
  /**
  * get all movies
  */
  rpc GetMovies (MovieRequest) returns (MoviesResult) {}
}


message ActorRequest {
    Actor actor = 1;
}

/**
 * actor result message, contains list of actors
 */
message ActorsResult {
    /**
     * list of actors
     */
    repeated Actor result = 1;
}

service ActorsService {
  /**
  * get all actors
  */
  rpc GetActors (ActorRequest) returns (ActorsResult) {}
}
